--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,8 @@
     <string name="name_error">Please enter your name</string>
     <string name="error_invalid_password">Password must be at least 8 char, 1 letter, 1 number, 1 special char</string>
     <string name="password_error">Please enter your password</string>
-    <string name="confirmation_password_error">"Password does not match "</string>
+    <string name="confirmation_password_error">"Please enter the confirmation password "</string>
+    <string name="error_invalid_confirmation_password">"Password does not match "</string>
     <string name="logout">logout</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="my_location_button">myLocationButton</string>
